PL/Projecto/tests/good/15.nx
function f : int (i : int)
{
  return i;
}

print(f (2));
