PL/Projecto/tests/bad/13.nx
function f : int (x : int)
{
  var y : int = x;
}

print(y);
